# magick--template

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
